v0.2.0: GL v2 — 13-command governed lifecycle with semantic constraints
- 13 public commands: see > bind > call > result > candidate > check > get > judge > decide > accept/reject > knowledge > explain
- Semantic constraints enforced at DirectAdapter + GovernanceKernel:
  * Finality: no judge/accept/reject after decision
  * INVALID candidates cannot be rehabilitated by judgement
  * Body must support requested affordance
  * Kernel ACCEPTED requires admissibility (checked before Decision created)
  * Admissibility only for VALIDATED/ASSESSED candidates
  * Final-aware decide() returns FINAL:status:decId
  * explain() shows FINAL for decided candidates
  * knowledge() sanitizes field values
  * Race guard in judge() for concurrent scenarios
- Cross-platform parity: ASTRA, Jason, JaCaMo adapters (gl.*, gl.actions.*, artifact ops)
- All v1 commands removed (use_provider, configure, invoke, assess, etc.)
- 73/73 tests passing
- Zero blockers for 8 accept/reject patterns